--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,20 +1,25 @@
 target_sources(chess PRIVATE
+        bitboard.cc
+        bitboard.h
         board.cc
         board.h
+        evaluation.cc
+        evaluation.h
         fen.cc
         fen.h
         fixed_search.cc
         fixed_search.h
+        inline.h
         iterative_search.cc
         iterative_search.h
         lock.cc
         lock.h
         move.cc
         move.h
+        move_score.cc
+        move_score.h
         movegen.cc
         movegen.h
-        movesort.cc
-        movesort.h
         piece.cc
         piece.h
         transposition.cc
