Pawn promotion + some more optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,15 @@ add_executable(chess src/main.cc)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_BINARY_DIR}")
 
-set_property(TARGET chess PROPERTY CMAKE_CXX_STANDARD 17)
-set_property(TARGET chess PROPERTY CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -O3")
+set(CMAKE_CXX_STANDARD 17)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -march=native -flto -fno-rtti")
+endif()
 
 target_include_directories(chess PRIVATE
         "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 add_subdirectory(src)
-
-target_link_libraries(chess)
