--- a/src/engine/search/CMakeLists.txt
+++ b/src/engine/search/CMakeLists.txt
@@ -5,4 +5,5 @@ target_sources(chess PRIVATE
         fixed_search.cc
         fixed_search.h
         iterative_search.cc
-        iterative_search.h)
+        iterative_search.h
+        score.h)
