--- a/src/engine/search/CMakeLists.txt
+++ b/src/engine/search/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources(chess PRIVATE
-        debug_info.h
         evaluation.cc
         evaluation.h
         fixed_search.cc
         fixed_search.h
         iterative_search.cc
         iterative_search.h
-        score.h)
+        score.h
+        statistics.h)
