Improved evaluation function
Added a king attack heuristic to the king safety evaluation. The king attack heuristic still has a long way to go, but I feel like the engine is starting to create more attacks on the enemy king now.

Also, added a separate king endgame table, and made the evaluations interpolate between the middlegame and endgame.

--- a/src/engine/eval/CMakeLists.txt
+++ b/src/engine/eval/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(chess PRIVATE
         evaluation.cc
         evaluation.h
+        game_phase.cc
+        game_phase.h
         piece_square_table.cc
         piece_square_table.h)
