--- a/src/engine/search/move_ordering/CMakeLists.txt
+++ b/src/engine/search/move_ordering/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(chess PRIVATE
         history.h
         move_ordering.cc
-        move_ordering.h)
+        move_ordering.h
+        see.cc
+        see.h)
