--- a/src/engine/search/move_ordering/CMakeLists.txt
+++ b/src/engine/search/move_ordering/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(chess PRIVATE
-        history.h
+        heuristics.cc
+        heuristics.h
         move_ordering.cc
         move_ordering.h
         see.cc
