Fixed rare deadlocks
If the search was stopped at the exact same time the search thread finished an iteration, a deadlock would occur.

This is because `IterativeSearcher::stop` would lock the manager mutex first, then the task mutex, but the search thread would lock the task mutex first, then call `IterativeSearcher::receiveResultFromThread` which locks the manager mutex.

Fixed the locking order, and also added in some safeguards to prevent mutexes from being accidentally locked twice by the same thread.

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(search)
 target_sources(chess PRIVATE
         init.h
         inline.h
-        intrinsics.h)
+        intrinsics.h
+        mutex.h)
