Small changes to CMake
Changed the CMake project name from `chess` to `fktb`

Also modernized some stuff, for instance replacing `set(CMAKE_CXX_FLAGS ...)` with `target_compile_options(...)`.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(engine)
 
-target_sources(chess PRIVATE
+target_sources(fktb PRIVATE
         test.cc
         test.h
         uci.cc
