--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(hash)
 add_subdirectory(move)
 add_subdirectory(search)
 
-target_sources(chess PRIVATE
+target_sources(fktb PRIVATE
         init.h
         inline.h
         intrinsics.h
