--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,17 @@
 cmake_minimum_required(VERSION 3.24)
-project(chess)
+project(fktb)
 
-add_executable(chess src/main.cc)
+add_executable(fktb src/main.cc)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_BINARY_DIR}")
-
-set(CMAKE_CXX_STANDARD 17)
+set_property(TARGET fktb PROPERTY CXX_STANDARD 17)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -march=native")
+    target_compile_options(fktb PRIVATE -O0 -g -march=native -fno-rtti)
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -march=native -flto -fno-rtti")
+    target_compile_options(fktb PRIVATE -Ofast -DNDEBUG -march=native -flto=auto -fno-rtti)
 endif()
 
-target_include_directories(chess PRIVATE
+target_include_directories(fktb PRIVATE
         "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 add_subdirectory(src)
