Initial NNUE implementation
Network was trained on Stockfish evaluations from the Lichess database.

--- a/src/engine/eval/CMakeLists.txt
+++ b/src/engine/eval/CMakeLists.txt
@@ -1,7 +1,3 @@
 target_sources(fktb PRIVATE
-        evaluation.cc
-        evaluation.h
-        game_phase.cc
-        game_phase.h
-        piece_square_table.cc
-        piece_square_table.h)
+        nnue.cc
+        nnue.h)
