Added a basic NNUE accumulator
This increases the nodes per second by about 5x.

The accumulator still has a lot of work left to do. A lot of things can be vectorized in the accumulator with SIMD. Additionally, the weights for the first hidden layer can be reorganized in memory to improve cache locality (this would also enable us to vectorize the `Accumulator::add` and `Accumulator::remove` functions). Finally, we should store the state of the accumulator in `MakeMoveInfo` to help alleviate any possible floating point errors that may have accumulated.

--- a/src/engine/eval/CMakeLists.txt
+++ b/src/engine/eval/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(fktb PRIVATE
+        accumulator.cc
+        accumulator.h
         embedded_network.h
         nnue.cc
         nnue.h)
