--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ add_executable(fktb src/main.cc)
 set_property(TARGET fktb PROPERTY CXX_STANDARD 17)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(fktb PRIVATE -O0 -g -march=native -fno-rtti)
+    target_compile_options(fktb PRIVATE -O0 -g -march=x86-64 -mbmi2 -fno-rtti)
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
-    target_compile_options(fktb PRIVATE -Ofast -DNDEBUG -march=native -flto=auto -fno-rtti)
+    target_compile_options(fktb PRIVATE -Ofast -DNDEBUG -march=x86-64 -mbmi2 -flto=auto -fno-rtti)
 endif()
 
 target_include_directories(fktb PRIVATE
