Make compilation more portable
Changed `-march=native` to `-march=x86-64 -mbmi2`.

No functional change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ add_executable(fktb src/main.cc)
 
 set_property(TARGET fktb PROPERTY CXX_STANDARD 17)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(fktb PRIVATE -O0 -g -march=native -fno-rtti)
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(fktb PRIVATE -O0 -g -march=x86-64 -mbmi2 -mavx2 -fno-rtti)
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
-    target_compile_options(fktb PRIVATE -Ofast -DNDEBUG -march=native -flto=auto -fno-rtti)
+    target_compile_options(fktb PRIVATE -Ofast -DNDEBUG -march=x86-64 -mbmi2 -mavx2 -flto=auto -fno-rtti)
 endif()
 
 target_include_directories(fktb PRIVATE
